--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="steve_cochran.myapplication.MainActivity">
+    tools:context="steve_cochran.myapplication.MainActivity"
+    android:background="@android:color/background_dark">
 
     <TextView
         android:text="0"
@@ -18,18 +19,24 @@
         android:layout_weight="0.04"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
         android:textAlignment="textEnd"
-        android:textStyle="normal|bold" />
+        android:textStyle="normal|bold"
+        android:textSize="45sp"
+        android:textColor="@android:color/background_light" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignRight="@+id/textView"
-        android:layout_alignEnd="@+id/textView">
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -50,12 +57,15 @@
                     android:id="@+id/col1">
 
                     <Button
-                        android:text="clear"
+                        android:text="AC"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
 
                         android:onClick="cClear"
-                        android:id="@+id/cClear" />
+                        android:id="@+id/cClear"
+                        android:background="@android:color/darker_gray"
+                        android:textStyle="normal|bold"
+                        android:textSize="30sp" />
 
                     <Button
                         android:text="7"
@@ -65,7 +75,9 @@
                         android:id="@+id/c7"
                         android:onClick="c7"
 
-                        />
+                        android:background="?attr/colorButtonNormal"
+                        android:textSize="24sp"
+                        android:textStyle="normal|bold" />
 
                     <Button
                         android:text="4"
@@ -76,7 +88,9 @@
                         android:onClick="c4"
 
 
-                        />
+                        android:background="?attr/colorButtonNormal"
+                        android:textSize="24sp"
+                        android:textStyle="normal|bold" />
 
                     <Button
                         android:text="1"
@@ -87,7 +101,9 @@
                         android:onClick="c1"
 
 
-                        />
+                        android:background="?attr/colorButtonNormal"
+                        android:textSize="24sp"
+                        android:textStyle="normal|bold" />
 
                 </LinearLayout>
 
@@ -105,7 +121,9 @@
                         android:id="@+id/cNeg"
                         android:onClick="cNeg"
 
-                        />
+                        android:background="@android:color/darker_gray"
+                        android:textSize="30sp"
+                        android:textStyle="normal|bold" />
 
                     <Button
                         android:text="8"
@@ -115,7 +133,9 @@
                         android:id="@+id/c8"
                         android:onClick="c8"
 
-                        />
+                        android:background="?attr/colorButtonNormal"
+                        android:textSize="24sp"
+                        android:textStyle="normal|bold" />
 
 
                     <Button
@@ -126,7 +146,9 @@
                         android:id="@+id/c5"
                         android:onClick="c5"
 
-                        />
+                        android:background="?attr/colorButtonNormal"
+                        android:textSize="24sp"
+                        android:textStyle="normal|bold" />
 
                     <Button
                         android:text="2"
@@ -137,7 +159,9 @@
                         android:onClick="c2"
 
 
-                        />
+                        android:background="?attr/colorButtonNormal"
+                        android:textStyle="normal|bold"
+                        android:textSize="24sp" />
 
                 </LinearLayout>
 
@@ -153,7 +177,10 @@
                         android:layout_height="wrap_content"
 
                         android:onClick="cPer"
-                        android:id="@+id/cPer" />
+                        android:id="@+id/cPer"
+                        android:background="@android:color/darker_gray"
+                        android:textStyle="normal|bold"
+                        android:textSize="30sp" />
 
                     <Button
                         android:text="9"
@@ -164,7 +191,9 @@
                         android:onClick="c9"
 
 
-                        />
+                        android:background="?attr/colorButtonNormal"
+                        android:textSize="24sp"
+                        android:textStyle="normal|bold" />
 
                     <Button
                         android:text="6"
@@ -174,7 +203,9 @@
                         android:id="@+id/c6"
                         android:onClick="c6"
 
-                        />
+                        android:background="?attr/colorButtonNormal"
+                        android:textSize="24sp"
+                        android:textStyle="normal|bold" />
 
                     <Button
                         android:text="3"
@@ -184,7 +215,9 @@
                         android:id="@+id/c3"
                         android:onClick="c3"
 
-                        />
+                        android:background="?attr/colorButtonNormal"
+                        android:textSize="24sp"
+                        android:textStyle="normal|bold" />
 
                 </LinearLayout>
 
@@ -197,35 +230,46 @@
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="divide"
+                        android:text="/"
 
                         android:id="@+id/cDivide"
                         android:onClick="cDivide"
 
-                        />
+                        android:background="@color/colorPrimary"
+                        style="@style/Widget.AppCompat.Button.Colored"
+                        android:textStyle="normal|bold"
+                        android:textSize="30sp" />
 
                     <Button
-                        android:text="MULT"
+                        android:text="x "
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
 
                         android:id="@+id/cMult"
                         android:onClick="cMult"
 
-                        />
+                        style="@style/Widget.AppCompat.Button.Colored"
+                        android:background="@color/colorPrimary"
+                        android:textStyle="normal|bold"
+                        android:textSize="18sp"
+                        android:textAlignment="center" />
 
                     <Button
-                        android:text="SUB"
+                        android:text="-"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
 
                         android:id="@+id/cSub"
                         android:onClick="cSub"
 
-                        />
+                        style="@style/Widget.AppCompat.Button.Colored"
+                        android:background="@color/colorPrimary"
+                        android:textStyle="normal|bold"
+                        android:textSize="36sp"
+                        android:textAlignment="center" />
 
                     <Button
-                        android:text="ADD"
+                        android:text="+"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
 
@@ -233,7 +277,11 @@
                         android:onClick="cAdd"
 
 
-                        />
+                        style="@style/Widget.AppCompat.Button.Colored"
+                        android:background="@color/colorPrimary"
+                        android:textStyle="normal|bold"
+                        android:textSize="30sp"
+                        android:textAlignment="center" />
 
                 </LinearLayout>
 
@@ -261,7 +309,9 @@
 
                             android:id="@+id/c0"
                             android:onClick="c0"
-                            />
+                            android:background="?attr/colorButtonNormal"
+                            android:textSize="24sp"
+                            android:textStyle="normal|bold" />
 
                         <Button
                             android:text="."
@@ -271,12 +321,14 @@
 
                             android:id="@+id/cDec"
                             android:onClick="cDec"
-                            />
+                            android:background="?attr/colorButtonNormal"
+                            android:textSize="24sp"
+                            android:textStyle="normal|bold" />
 
                     </LinearLayout>
 
                     <Button
-                        android:text="equals"
+                        android:text="="
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.34"
@@ -284,7 +336,11 @@
                         android:id="@+id/cEquals"
                         android:onClick="cEquals"
 
-                        />
+                        style="@style/Widget.AppCompat.Button.Colored"
+                        android:background="@color/colorPrimary"
+                        android:textStyle="normal|bold"
+                        android:textSize="30sp"
+                        android:backgroundTint="@color/colorPrimary" />
 
                 </LinearLayout>
 
